--- a/crates/pixi_global/Cargo.toml
+++ b/crates/pixi_global/Cargo.toml
@@ -29,6 +29,7 @@ pixi_config = { workspace = true }
 pixi_consts = { workspace = true }
 pixi_core = { workspace = true }
 pixi_manifest = { workspace = true }
+pixi_path = { workspace = true }
 pixi_progress = { workspace = true }
 pixi_reporters = { workspace = true }
 pixi_spec = { workspace = true }
