--- a/crates/pixi_git/Cargo.toml
+++ b/crates/pixi_git/Cargo.toml
@@ -13,7 +13,7 @@ version = "0.0.1"
 dashmap = { workspace = true }
 dunce = { workspace = true }
 fs-err = { workspace = true, features = ["tokio"] }
-pixi_utils = { workspace = true, features = ["rustls-tls"] }
+pixi_utils = { workspace = true }
 rattler_networking = { workspace = true }
 reqwest = { workspace = true, features = ["blocking"] }
 reqwest-middleware = { workspace = true }
