--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -77,7 +77,7 @@ jobs:
           git: https://github.com/ruben-arts/cargo-dist.git
           rev: d4085f9cf734dbfeb49d6ff89b16c768b7977ad3 # feature/update_bin_in_root_tar
 
-      - uses: prefix-dev/setup-pixi@main
+      - uses: prefix-dev/setup-pixi@82d477f15f3a381dbcc8adc1206ce643fe110fb7 # v0.9.3
         with:
           environments: dist
           activate-environment: true
@@ -163,7 +163,7 @@ jobs:
           crate: cargo-zigbuild
           version: "0.20.1"
 
-      - uses: prefix-dev/setup-pixi@main
+      - uses: prefix-dev/setup-pixi@82d477f15f3a381dbcc8adc1206ce643fe110fb7 # v0.9.3
         with:
           environments: dist
           activate-environment: true
