--- a/lefthook.yaml
+++ b/lefthook.yaml
@@ -22,8 +22,8 @@ pre-commit:
   jobs:
     - name: actionlint
       run: pixi {run} actionlint
-    # - name: zizmor
-    #   run: pixi {run} zizmor
+    - name: zizmor
+      run: pixi {run} zizmor
     - name: cargo-fmt
       glob: "*.rs"
       stage_fixed: true
