--- a/pixi.toml
+++ b/pixi.toml
@@ -138,6 +138,7 @@ ruff = ">=0.14.0,<0.15"
 shellcheck = ">=0.10.0,<0.11"
 taplo = ">=0.10.0,<0.11"
 typos = ">=1.38.1,<2"
+zizmor = ">=1.18.0,<2"
 
 [feature.lint.tasks]
 actionlint = { cmd = "actionlint", env = { SHELLCHECK_OPTS = "-e SC2086" } }
@@ -164,6 +165,7 @@ toml-format = { cmd = "taplo fmt", env = { RUST_LOG = "warn" } }
 toml-lint = "taplo lint --verbose **/pixi.toml"
 typecheck-python = "basedpyright"
 typos = "typos --force-exclude"
+zizmor = "zizmor .github/ --min-severity=high"
 
 [feature.rust.dependencies]
 rust = ">=1.88.0,<1.89"
