--- a/crates/pixi_path/Cargo.toml
+++ b/crates/pixi_path/Cargo.toml
@@ -10,6 +10,7 @@ version = "0.1.0"
 description = "Type-safe path wrappers with guarantees about absolute paths and directories"
 
 [dependencies]
+fs-err = { workspace = true }
 serde = { workspace = true, features = ["derive"] }
 thiserror = { workspace = true }
 
