--- a/.github/workflows/test_common_wheels.yml
+++ b/.github/workflows/test_common_wheels.yml
@@ -34,6 +34,7 @@ jobs:
         uses: actions/checkout@8e8c483db84b4bee98b60c0593521ed34d9990e8 # v6
         with:
           ref: ${{ inputs.sha }}
+          persist-credentials: false
       - name: Create Dev Drive using ReFS
         if: ${{ contains(inputs.arch, 'windows') }}
         run: ${{ github.workspace }}/.github/workflows/setup-dev-drive.ps1
