--- a/.github/workflows/schema.yml
+++ b/.github/workflows/schema.yml
@@ -15,7 +15,8 @@ on:
       - "schema/**"
       - "**/schema.yml"
 
-permissions: read-all
+permissions:
+  contents: read
 
 jobs:
   test-schema:
