--- a/.github/workflows/test_common_wheels.yml
+++ b/.github/workflows/test_common_wheels.yml
@@ -16,7 +16,8 @@ on:
         description: "The operating system to run the tests on"
         required: true
 
-permissions: read-all
+permissions:
+  contents: read
 
 jobs:
   test_common_wheels:
