--- a/cliff.toml
+++ b/cliff.toml
@@ -90,6 +90,7 @@ commit_preprocessors = [
 ]
 # regex for parsing and grouping commits
 commit_parsers = [
+  { message = "^feat.*", group = "Added" },
   { message = "^docs:.*", group = "Documentation" },
   { message = "^style:.*", group = "Style" },
   { message = "^refactor:.*", group = "Refactor" },
