--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -450,6 +450,7 @@ jobs:
       - uses: prefix-dev/setup-pixi@82d477f15f3a381dbcc8adc1206ce643fe110fb7 # v0.9.3
         with:
           cache-write: ${{ github.ref == 'refs/heads/main' }}
+          locked: false
       - name: "Build"
         run: pixi build --output-dir ${{ env.CICD_INTERMEDIATES_DIR }}
       - name: "Upload to prefix.dev"
